// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavList renders a simple list 1`] = `
.c3 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
  font-size: 14px;
}

.c3:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c5 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 600;
  word-break: break-word;
  line-height: 20px;
}

.c6 {
  font-size: 12px;
  line-height: 16px;
  color: var(--fgColor-attention,var(--color-attention-fg,#9a6700));
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
  line-height: 20px;
}

.c0 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c2[data-loading] {
  cursor: default;
}

.c2[aria-disabled],
.c2[data-inactive] {
  cursor: not-allowed;
}

.c2[aria-disabled] [data-component="ActionList.Checkbox"],
.c2[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c2[aria-disabled] [data-component="ActionList.Selection"],
.c2[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c2 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c2 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c2:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c1 {
  --divider-color: transparent !important;
}

.c2:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c2[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c2:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c1,
.c2[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c2::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c2[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c2[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c7[data-loading] {
  cursor: default;
}

.c7[aria-disabled],
.c7[data-inactive] {
  cursor: not-allowed;
}

.c7[aria-disabled] [data-component="ActionList.Checkbox"],
.c7[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c7[aria-disabled] [data-component="ActionList.Selection"],
.c7[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c7 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c7 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c7:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c1 {
  --divider-color: transparent !important;
}

.c7:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c7[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c7:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c1,
.c7[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c7[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c7[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

@media (forced-colors:active) {
  .c2:focus,
  .c2:focus-visible,
  .c2 > a.focus-visible,
  .c2[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c2:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c2:focus-visible,
  .c2 > a.focus-visible,
  .c2:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c2:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {
  .c7:focus,
  .c7:focus-visible,
  .c7 > a.focus-visible,
  .c7[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c7:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c7:focus-visible,
  .c7 > a.focus-visible,
  .c7:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c7:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<div>
  <nav
    class=""
  >
    <ul
      class="c0"
    >
      <li
        class="c1 c2"
      >
        <a
          aria-current="page"
          aria-labelledby=":r2:--label  "
          class="c3 Link"
          href="/"
          id=":r2:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <div
            class="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="c5"
              id=":r2:--label"
            >
              Home
            </span>
            <span
              class="c6"
            />
          </div>
        </a>
      </li>
      <li
        class="c1 c7"
      >
        <a
          aria-labelledby=":r3:--label  "
          class="c3 Link"
          href="/about"
          id=":r3:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <div
            class="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="c8"
              id=":r3:--label"
            >
              About
            </span>
            <span
              class="c6"
            />
          </div>
        </a>
      </li>
      <li
        class="c1 c7"
      >
        <a
          aria-labelledby=":r4:--label  "
          class="c3 Link"
          href="/contact"
          id=":r4:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <div
            class="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="c8"
              id=":r4:--label"
            >
              Contact
            </span>
            <span
              class="c6"
            />
          </div>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList renders with groups 1`] = `
.c1 {
  height: 1px;
  background-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
  margin-top: calc(8px - 1px);
  margin-bottom: 8px;
  list-style: none;
}

.c1:first-child {
  display: none;
}

.c2 {
  list-style: none;
}

.c2:not(:first-child) {
  margin-top: 8px;
}

.c2:has([data-component="GroupHeadingWrap"] + ul > [data-component="GroupHeadingWrap"]) > [data-component="GroupHeadingWrap"] {
  display: none;
}

.c3 {
  padding-inline-start: 0;
}

.c6 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
  font-size: 14px;
}

.c6:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 600;
  word-break: break-word;
  line-height: 20px;
}

.c9 {
  font-size: 12px;
  line-height: 16px;
  color: var(--fgColor-attention,var(--color-attention-fg,#9a6700));
}

.c11 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
  line-height: 20px;
}

.c0 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c5[data-loading] {
  cursor: default;
}

.c5[aria-disabled],
.c5[data-inactive] {
  cursor: not-allowed;
}

.c5[aria-disabled] [data-component="ActionList.Checkbox"],
.c5[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c5[aria-disabled] [data-component="ActionList.Selection"],
.c5[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c5 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c5 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c5:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c4 {
  --divider-color: transparent !important;
}

.c5:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c5[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c5:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c4,
.c5[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c5::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c5[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c5[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c10[data-loading] {
  cursor: default;
}

.c10[aria-disabled],
.c10[data-inactive] {
  cursor: not-allowed;
}

.c10[aria-disabled] [data-component="ActionList.Checkbox"],
.c10[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c10[aria-disabled] [data-component="ActionList.Selection"],
.c10[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c10 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c10 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c10:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c4 {
  --divider-color: transparent !important;
}

.c10:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c10[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c10:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c4,
.c10[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c10[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c10[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

@media (forced-colors:active) {
  .c5:focus,
  .c5:focus-visible,
  .c5 > a.focus-visible,
  .c5[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c5:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c5:focus-visible,
  .c5 > a.focus-visible,
  .c5:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c5:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {
  .c10:focus,
  .c10:focus-visible,
  .c10 > a.focus-visible,
  .c10[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c10:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c10:focus-visible,
  .c10 > a.focus-visible,
  .c10:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c10:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<div>
  <nav
    class=""
  >
    <ul
      class="c0"
    >
      <li
        aria-hidden="true"
        class="c1"
        data-component="ActionList.Divider"
      />
      <li
        class="c2"
      >
        <div
          class="GroupHeadingWrap"
          data-component="GroupHeadingWrap"
          data-variant="subtle"
        >
          <h3
            class="GroupHeading"
            data-component="ActionList.GroupHeading"
            id=":r7:"
          >
            Overview
          </h3>
        </div>
        <ul
          aria-labelledby=":r7:"
          class="c3"
        >
          <li
            class="c4 c5"
          >
            <a
              aria-current="page"
              aria-labelledby=":r8:--label  "
              class="c6 Link"
              href="/getting-started"
              id=":r8:"
              style="--subitem-depth: 0;"
              tabindex="0"
            >
              <div
                class="c7"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="c8"
                  id=":r8:--label"
                >
                  Getting started
                </span>
                <span
                  class="c9"
                />
              </div>
            </a>
          </li>
        </ul>
      </li>
      <li
        aria-hidden="true"
        class="c1"
        data-component="ActionList.Divider"
      />
      <li
        class="c2"
      >
        <div
          class="GroupHeadingWrap"
          data-component="GroupHeadingWrap"
          data-variant="subtle"
        >
          <h3
            class="GroupHeading"
            data-component="ActionList.GroupHeading"
            id=":r9:"
          >
            Components
          </h3>
        </div>
        <ul
          aria-labelledby=":r9:"
          class="c3"
        >
          <li
            class="c4 c10"
          >
            <a
              aria-labelledby=":ra:--label  "
              class="c6 Link"
              href="/Avatar"
              id=":ra:"
              style="--subitem-depth: 0;"
              tabindex="0"
            >
              <div
                class="c7"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="c11"
                  id=":ra:--label"
                >
                  Avatar
                </span>
                <span
                  class="c9"
                />
              </div>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList.Item with NavList.SubNav does not have active styles if SubNav contains the current item and is open 1`] = `
.c1 {
  list-style: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
  line-height: 20px;
}

.c8 {
  font-size: 12px;
  line-height: 16px;
  color: var(--fgColor-attention,var(--color-attention-fg,#9a6700));
}

.c11 {
  padding-left: 16px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
  font-size: 12px;
  font-weight: 400;
}

.c11:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 600;
  word-break: break-word;
  line-height: 20px;
}

.c9 {
  padding: 0;
  margin: 0;
  display: block;
}

.c0 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

[data-component="ActionList.Divider"] + .c2 {
  --divider-color: transparent !important;
}

.c13:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c2,
.c13[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c10[data-loading] {
  cursor: default;
}

.c10[aria-disabled],
.c10[data-inactive] {
  cursor: not-allowed;
}

.c10[aria-disabled] [data-component="ActionList.Checkbox"],
.c10[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c10[aria-disabled] [data-component="ActionList.Selection"],
.c10[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c10 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c10 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c10:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c2 {
  --divider-color: transparent !important;
}

.c10:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c10[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c10:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c2,
.c10[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c10::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c10[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c10[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
}

.c3[data-loading] {
  cursor: default;
}

.c3[aria-disabled],
.c3[data-inactive] {
  cursor: not-allowed;
}

.c3[aria-disabled] [data-component="ActionList.Checkbox"],
.c3[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c3[aria-disabled] [data-component="ActionList.Selection"],
.c3[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c3 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c3 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c3:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c2 {
  --divider-color: transparent !important;
}

.c3:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c3[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c3:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c2,
.c3[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c3[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c3[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c7 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {
  .c10:focus,
  .c10:focus-visible,
  .c10 > a.focus-visible,
  .c10[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c10:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c10:focus-visible,
  .c10 > a.focus-visible,
  .c10:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c10:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {
  .c3:focus,
  .c3:focus-visible,
  .c3 > a.focus-visible,
  .c3[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c3:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c3:focus-visible,
  .c3 > a.focus-visible,
  .c3:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c3:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<div>
  <nav
    class=""
  >
    <ul
      class="c0"
    >
      <li
        aria-labelledby=":r26:"
        class="c1"
      >
        <button
          aria-controls=":r27:"
          aria-expanded="true"
          aria-labelledby=":r26:--label :r26:--trailing-visual "
          class="c2 c3"
          id=":r26:"
          tabindex="0"
        >
          <div
            class="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <div
              class="c5"
            >
              <span
                class="c6"
                id=":r26:--label"
              >
                Item
              </span>
              <span
                class="TrailingVisual VisualWrap"
                id=":r26:--trailing-visual"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-chevron-down c7"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="c8"
            />
          </div>
        </button>
        <div>
          <ul
            aria-labelledby=":r26:"
            class="c9"
            id=":r27:"
          >
            <li
              class="c2 c10"
            >
              <a
                aria-current="page"
                aria-labelledby=":r29:--label  "
                class="c11 Link"
                href="#"
                id=":r29:"
                style="--subitem-depth: 1;"
                tabindex="0"
              >
                <div
                  class="c4"
                  data-component="ActionList.Item--DividerContainer"
                >
                  <span
                    class="c12"
                    id=":r29:--label"
                  >
                    Sub Item
                  </span>
                  <span
                    class="c8"
                  />
                </div>
              </a>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList.Item with NavList.SubNav has active styles if SubNav contains the current item and is closed 1`] = `
.c1 {
  list-style: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  font-size: 12px;
  line-height: 16px;
  color: var(--fgColor-attention,var(--color-attention-fg,#9a6700));
}

.c9 {
  padding: 0;
  margin: 0;
  display: none;
}

.c11 {
  padding-left: 16px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
  font-size: 12px;
  font-weight: 400;
}

.c11:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 600;
  word-break: break-word;
  line-height: 20px;
}

.c0 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

[data-component="ActionList.Divider"] + .c2 {
  --divider-color: transparent !important;
}

.c12:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c2,
.c12[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c10[data-loading] {
  cursor: default;
}

.c10[aria-disabled],
.c10[data-inactive] {
  cursor: not-allowed;
}

.c10[aria-disabled] [data-component="ActionList.Checkbox"],
.c10[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c10[aria-disabled] [data-component="ActionList.Selection"],
.c10[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c10 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c10 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c10:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c2 {
  --divider-color: transparent !important;
}

.c10:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c10[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c10:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c2,
.c10[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c10::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c10[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c10[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

[data-component="ActionList.Divider"] + .c2 {
  --divider-color: transparent !important;
}

.c13:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c2,
.c13[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 16px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c3[data-loading] {
  cursor: default;
}

.c3[aria-disabled],
.c3[data-inactive] {
  cursor: not-allowed;
}

.c3[aria-disabled] [data-component="ActionList.Checkbox"],
.c3[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c3[aria-disabled] [data-component="ActionList.Selection"],
.c3[data-inactive] [data-component="ActionList.Selection"] {
  color: var(--fgColor-disabled,var(--color-primer-fg-disabled,#8c959f));
}

.c3 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c3 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c3:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c2 {
  --divider-color: transparent !important;
}

.c3:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c3[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c3:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c2,
.c3[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c3::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c3[data-is-active-descendant] {
  font-weight: 400;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c3[data-is-active-descendant]::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--borderColor-accent-emphasis);
  border-radius: 6px;
}

.c7 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {
  .c10:focus,
  .c10:focus-visible,
  .c10 > a.focus-visible,
  .c10[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c10:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c10:focus-visible,
  .c10 > a.focus-visible,
  .c10:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c10:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {
  .c3:focus,
  .c3:focus-visible,
  .c3 > a.focus-visible,
  .c3[data-is-active-descendant] {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c3:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c3:focus-visible,
  .c3 > a.focus-visible,
  .c3:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--focus-outlineColor);
  }

  .c3:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<div>
  <nav
    class=""
  >
    <ul
      class="c0"
    >
      <li
        aria-labelledby=":r20:"
        class="c1"
      >
        <button
          aria-controls=":r21:"
          aria-expanded="false"
          aria-labelledby=":r20:--label :r20:--trailing-visual "
          class="c2 c3"
          id=":r20:"
          tabindex="0"
        >
          <div
            class="c4"
            data-component="ActionList.Item--DividerContainer"
          >
            <div
              class="c5"
            >
              <span
                class="c6"
                id=":r20:--label"
              >
                Item
              </span>
              <span
                class="TrailingVisual VisualWrap"
                id=":r20:--trailing-visual"
              >
                <svg
                  aria-hidden="true"
                  class="octicon octicon-chevron-down c7"
                  display="inline-block"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  overflow="visible"
                  style="vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="c8"
            />
          </div>
        </button>
        <div>
          <ul
            aria-labelledby=":r20:"
            class="c9"
            id=":r21:"
          >
            <li
              class="c2 c10"
            >
              <a
                aria-current="page"
                aria-labelledby=":r23:--label  "
                class="c11 Link"
                href="#"
                id=":r23:"
                style="--subitem-depth: 1;"
                tabindex="0"
              >
                <div
                  class="c4"
                  data-component="ActionList.Item--DividerContainer"
                >
                  <span
                    class="c6"
                    id=":r23:--label"
                  >
                    Sub Item
                  </span>
                  <span
                    class="c8"
                  />
                </div>
              </a>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </nav>
</div>
`;
